syntax = "proto3";

enum ReservationStatus {
    PENDING = 0;
    CONFIRMED = 1;
    CANCELLED = 2;
    CHECKED_IN = 3;
    CHECKED_OUT = 4;
}

enum RoomType {
    SINGLE = 0;
    DOUBLE = 1;
    FAMILY = 2;
    SUITE = 3;
}

message Reservation {
  string reservation_id = 1;
  string guest_name = 2;
  string room_number = 3;
  string check_in_date = 4;
  string check_out_date = 5;
  RoomType room_type = 6;
  ReservationStatus status = 7;
}

service ReservationService {
    //create a new reservation
  rpc MakeReservation(Reservation) returns (ReservationResponse);
  //update an existing reservation
  rpc ModifyReservation(Reservation) returns (ReservationMessageResponse);
  //cancel an existing reservation
  rpc CancelReservation(GetReservationRequest) returns (ReservationMessageResponse);
  //get a reservation by id
  rpc GetReservation(GetReservationRequest) returns (ReservationResponse);
  //get all reservations
  rpc GetAllReservations(EmptyRequest) returns (AllReservationResponse);
}

/////REQUESTS//////
//request to get a reservation by id
message GetReservationRequest {
    string reservation_id = 1;
}
//empty request
message EmptyRequest {}

/////RESPONSES//////
//response to a reservation request returns the given reservation object and a message
message ReservationMessageResponse {
    Reservation reservation = 1;
    string message = 2;
}
//response to a reservation that returns the reservation object
message ReservationResponse {
    Reservation reservation = 1;
}

//response to get all reservations
message AllReservationResponse {
    repeated Reservation reservations = 1;
}

